<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.EnterAddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bt_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/arrow_back_blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:text="@string/APPLICATION_FOR_CONNECTION"
            android:textSize="22sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <AutoCompleteTextView
                android:id="@+id/choose_street_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:completionThreshold="3"
                android:hint="@string/CHOOSE_A_STREET"
                android:inputType="text" />

            <AutoCompleteTextView
                android:id="@+id/choose_house_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:hint="@string/CHOOSE_A_HOUSE"
                android:inputType="text"
                android:visibility="gone"
                tools:visibility="visible" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enter_house_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/HOUSE" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enter_building_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/BUILDING" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enter_apartment_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/APARTMENT" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        android:letterSpacing="0.03"
        android:text="@string/SEND"
        android:textColor="@color/white" />

</LinearLayout>